--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "private": true,
-  "name": "my-nextron-app",
-  "description": "My application description",
+  "name": "automacao-front",
+  "description": "Automacao de processos para cadastro",
   "version": "1.0.0",
-  "author": "Yoshihide Shiono <shiono.yoshihide@gmail.com>",
+  "author": "Thais Ventura <thaisvtr26@gmail.com>",
   "main": "app/background.js",
   "scripts": {
     "dev": "nextron",
@@ -16,7 +16,8 @@
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
     "lucide-react": "^0.383.0",
-    "sharp": "^0.33.4"
+    "sharp": "^0.33.4",
+    "ffmpeg-static": "^4.2.7"
   },
   "devDependencies": {
     "@types/node": "^20.11.16",
@@ -31,5 +32,33 @@
     "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
+  },
+  "build": {
+    "appId": "com.automacao.front",
+    "files": [
+      "dist/**/*",
+      "node_modules/**/*",
+      "app/**/*",
+      "package.json"
+    ],
+    "extraFiles": [
+      {
+        "from": "node_modules/ffmpeg-static",
+        "to": "resources/ffmpeg.dll",
+        "filter": ["**/*"]
+      }
+    ],
+    "mac": {
+      "category": "your.app.category.type"
+    },
+    "win": {
+      "target": "nsis"
+    },
+    "linux": {
+      "target": [
+        "AppImage",
+        "deb"
+      ]
+    }
   }
 }
