--- a/package.json
+++ b/package.json
@@ -52,8 +52,7 @@
       "category": "your.app.category.type"
     },
     "win": {
-      "target": "nsis",
-      "icon": "renderer/public/icon.ico"
+      "target": "nsis"
     },
     "linux": {
       "target": [
